﻿2007-06-02  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/winver.h, README, NEWS, CMakeLists.txt, configure.ac,
	data/help/changes.txt, data/help/header.txt: Updated version and
	release date and summarized changes.
	* src/gui/chat.h, src/gui/chat.cpp: Changed color of chat messages in
	OpenGL mode from orange to black.
	* src/gui/sell.cpp, src/gui/buy.h, src/gui/buy.cpp, src/gui/sell.h:
	Some cleanup of buy/sell dialog code.

2007-06-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/gui/CMakeLists.txt, data/graphics/gui/Makefile.am:
	Added target cursors to installed files.

2007-05-31  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_16-1.tmx.gz: Fixed an inconsistency with the neighbor
	map (no new walkmap required).

2007-05-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/sell.cpp, src/gui/buy.cpp, src/being.cpp: A bunch of
	lingering syntactical changes.
	* src/gui/viewport.cpp: Added a missing include and fixed a bug with
	cleaning up target cursor animations.

2007-05-23  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/viewport.cpp,
	data/graphics/gui/target-cursor-blue-s.png,
	data/graphics/gui/target-cursor-blue-m.png,
	data/graphics/gui/target-cursor-blue-l.png,
	data/graphics/gui/target-cursor-red-s.png,
	data/graphics/gui/target-cursor-red-m.png,
	data/graphics/gui/target-cursor-red-l.png: Replaced target cursor
	graphics with higher quality ones by Pauan.
	* src/particle.cpp: Made bouncing particles immune against death by
	ground contact and removed a nonsensical debugging log message. Made
	text splash effects fade out.
	* src/textparticle.cpp: Implemented fading in and out for text
	particles.
	* src/being.cpp, src/particle.cpp, src/particle.h,
	src/textparticle.cpp, src/textparticle.h: The color values of text
	particles are now stored in 3 integers instead of a Guichan color
	structure.

2007-05-20  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* tmw.cbp: Updated Code::Blocks project file.
