@@ -1,6 +1,7 @@
 man6_MANS = tmw.6
 
-EXTRA_DIST = packages.txt \
+EXTRA_DIST = $(man6_MANS) \
+	     packages.txt \
 	     FAQ.txt \
 	     HACKING.txt \
 	     SOURCE/tmwdox.sh \
