@@ -204,6 +204,8 @@ tmw_SOURCES = gui/widgets/resizegrip.cpp \
 	      utils/base64.cpp \
 	      utils/base64.h \
 	      utils/dtor.h \
+	      utils/fastsqrt.h \
+	      utils/minmax.h \
 	      utils/tostring.h \
 	      utils/xml.cpp \
 	      utils/xml.h \
